--- a/arquivos/index.html
+++ b/arquivos/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <!---Script-->
     <script defer src="./js/script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>Relogio</title>
 </head>
 <body>
@@ -19,6 +22,7 @@
             <div class="minute-hand"></div>
             <div class="second-hand"></div>
 
+            <!---numero do relogio-->
             <div class="number number-1">1</div>
             <div class="number number-2">2</div>
             <div class="number number-3">3</div>
